data/derived/comb/progs/unify/prog2302.ml.out
Characters 91-126:
  | 1 ->  if(rand > 1) then buildSine( build(rand, depth - 1) )
                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type expr but an expression was expected of type
         unit
